// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System asyncs clearCache 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {},
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs clearCache 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {},
        "type": "REDUX_OPENFIN_RES::CLEAR_CACHE_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs clearCache 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": undefined,
          "payload": Object {},
          "type": "REDUX_OPENFIN_REQ::CLEAR_CACHE",
        },
        "OpenFin API call System.clearCache() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getDeviceUserId 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getDeviceUserId 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {
          "id": undefined,
        },
        "type": "REDUX_OPENFIN_RES::GET_DEVICE_USER_ID_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getDeviceUserId 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": undefined,
          "payload": Object {},
          "type": "REDUX_OPENFIN_REQ::GET_DEVICE_USER_ID",
        },
        "OpenFin API call System.getDeviceUserId() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getEnvironmentVariable 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "env",
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getEnvironmentVariable 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {
          "env": "env",
          "value": undefined,
        },
        "type": "REDUX_OPENFIN_RES::GET_ENVIRONMENT_VARIABLE_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getEnvironmentVariable 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": undefined,
          "payload": Object {
            "env": "env",
          },
          "type": "REDUX_OPENFIN_REQ::GET_ENVIRONMENT_VARIABLE",
        },
        "OpenFin API call System.getEnvironmentVariable() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getHostSpecs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getHostSpecs 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {},
        "type": "REDUX_OPENFIN::GET_HOST_SPECS_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getHostSpecs 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": false,
          "payload": Object {},
          "type": "REDUX_OPENFIN::GET_HOST_SPECS",
        },
        "OpenFin API call System.getHostSpecs() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getMachineId 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getMachineId 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {
          "id": undefined,
        },
        "type": "REDUX_OPENFIN_RES::GET_MACHINE_ID_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getMachineId 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": undefined,
          "payload": Object {},
          "type": "REDUX_OPENFIN_REQ::GET_MACHINE_ID",
        },
        "OpenFin API call System.getMachine() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getMonitorInfo 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getMonitorInfo 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {},
        "type": "REDUX_OPENFIN::GET_MONITOR_INFO_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getMonitorInfo 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": false,
          "payload": Object {},
          "type": "REDUX_OPENFIN::GET_MONITOR_INFO",
        },
        "OpenFin API call System.getMonitorInfo() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;

exports[`System asyncs getVersion 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
      [MockFunction],
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getVersion 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "error": undefined,
        "payload": Object {
          "version": undefined,
        },
        "type": "REDUX_OPENFIN_RES::GET_VERSION_RES",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`System asyncs getVersion 3`] = `
Object {
  "__esModule": true,
  "default": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "error": undefined,
          "payload": Object {},
          "type": "REDUX_OPENFIN_REQ::GET_VERSION",
        },
        "OpenFin API call System.getVersion() failed.",
        [Function],
        [Function],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;
